fix overlays and overflows

--- a/apps/platform/src/components/platform.module.css
+++ b/apps/platform/src/components/platform.module.css
@@ -10,4 +10,6 @@
 
 .wrapper {
   grid-area: main;
+  height: calc(100vh - 3.5rem);
+  overflow: hidden;
 }
